tests/baselines/reference/spreadOfParamsFromGeneratorMakesRequiredParams.errors.txt
error TS2318: Cannot find global type 'IterableIterator'.
tests/cases/compiler/spreadOfParamsFromGeneratorMakesRequiredParams.ts(6,1): error TS2345: Argument of type '[]' is not assignable to parameter of type 'never'.


!!! error TS2318: Cannot find global type 'IterableIterator'.
==== tests/cases/compiler/spreadOfParamsFromGeneratorMakesRequiredParams.ts (1 errors) ====
    declare function call<Fn extends (...args: any[]) => any>(
        fn: Fn,
        ...args: Parameters<Fn>
    ): any;
    
    call(function* (a: 'a') { }); // error, 2nd argument required
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '[]' is not assignable to parameter of type 'never'.